Fixed alignment of breadcrumbs according todesign

--- a/openbudget/apps/entities/static/entities/explorer/css/sheet-header.css
+++ b/openbudget/apps/entities/static/entities/explorer/css/sheet-header.css
@@ -97,7 +97,7 @@
     display: inline-block;
     position: absolute;
     top: 1.3rem;
-    right: 130px;
+    right: 188px;
     left: 108px;
     width: auto;
     height: 1.3rem;
